# imgui_test

./: .clang-format  CMakeLists.txt  compile_commands.json  imgui.ini
scripts/: build.bat  debug.bat  prep.bat  run.bat  test.bat
src/: CMakeLists.txt  camera.h  io_handler.h  main.cpp  main2.cpp  main_last.cpp  mainx.cpp
src/err/: exception_type.h  scrooge_exception.h  spec_exception.h
src/gfx/: camera.h  composer.h  main_window.h  mesh.h  plot_window.h  shader.h  window_manager.h  window_user_data.h
src/gfx/scenes/: main_menu.h  plot.h
src/gfx/shaders/: plot.fs  plot.vs  triangle.fs  triangle.vs
